// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Page Component renders something went wrong 1`] = `
<DocumentFragment>
  <div
    class="css-5xmk2m"
  >
    <div
      class="css-108k6cn"
    >
      <img
        alt="error"
        height="280"
        src="something_wrong.png"
        width="330"
      />
    </div>
    <div
      class="css-108k6cn"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-bezmlo-MuiTypography-root"
      >
        common.somethingWentWrong.title
      </h5>
      <p
        class="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
      >
        common.somethingWentWrong.description
      </p>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-u89a6x-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        common.button.goBackHome
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Error Page Component renders the page without breaking 1`] = `
<DocumentFragment>
  <div
    class="css-5xmk2m"
  >
    <div
      class="css-108k6cn"
    >
      <img
        alt="error"
        height="280"
        src="something_wrong.png"
        width="330"
      />
    </div>
    <div
      class="css-108k6cn"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-bezmlo-MuiTypography-root"
      >
        common.notFound.title
      </h5>
      <p
        class="MuiTypography-root MuiTypography-body2 css-1d3njat-MuiTypography-root"
      >
        common.notFound.description
      </p>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-u89a6x-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        common.button.goBackHome
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
